<!--
  ~ Created by Tomasz Kiljanczyk on 25/01/2025, 18:55
  ~ Copyright (c) 2025 . All rights reserved.
  ~ Last modified 08/12/2024, 21:35
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="dev.thomas_kiljanczyk.lyriccast.ui.main.MainActivity"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/action_menu_edit"
        android:icon="@drawable/round_edit_24"
        android:iconTint="@color/icon_primary"
        android:title="@string/main_activity_button_edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_menu_delete"
        android:icon="@drawable/round_delete_outline_24"
        android:iconTint="@color/icon_primary"
        android:title="@string/action_menu_button_delete"
        app:showAsAction="always" />

</menu>