<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Tomasz Kiljanczyk on 25/01/2025, 18:55
  ~ Copyright (c) 2025 . All rights reserved.
  ~ Last modified 07/05/2024, 23:59
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tin_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_manager_hint_category_name"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/ed_max_length_category_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_category_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="21" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_category_color"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:outlineProvider="background"
        app:layout_constraintBottom_toBottomOf="@+id/dropdown_layout_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dropdown_layout_category"
        app:strokeWidth="0dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdown_layout_category"
        style="@style/Widget.LyricCast.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/category_manager_hint_category_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_category_color"
        app:layout_constraintTop_toBottomOf="@+id/tin_category_name">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/dropdown_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:listitem="@layout/dropdown_item_color" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>