<!--
  ~ Created by Tomasz Kiljanczyk on 15/01/2025, 19:32
  ~ Copyright (c) 2025 . All rights reserved.
  ~ Last modified 15/01/2025, 17:14
  -->

<resources>
    <string name="app_name" translatable="false">LyricCast</string>

    <!-- Chromecast -->
    <!-- Development Chromecast app id -->
    <string name="chromecast_app_id" translatable="false">7E37374E</string>

    <!-- Placeholders -->
    <string name="placeholder_text" translatable="false">Text</string>
    <string name="placeholder_title" translatable="false">Title</string>
    <string name="placeholder_name" translatable="false">Name</string>
    <string name="placeholder_category" translatable="false">Category</string>
    <string name="placeholder_progress_message" translatable="false">Importing data …</string>

    <!-- Titles -->
    <string name="title_category_manager">Manage categories</string>
    <string name="title_categories">Categories</string>
    <string name="title_settings">Settings</string>
    <string name="title_song_editor">Song editor</string>
    <string name="title_setlist_editor">Setlist editor</string>
    <string name="title_controls">Controls</string>
    <string name="title_setlists">Setlists</string>
    <string name="title_songs">Songs</string>
    <string name="title_session_client">Session</string>

    <!-- Hints -->
    <string name="hint_song_title">Song title</string>
    <string name="hint_song_category">Category</string>
    <string name="hint_setlist_name">Setlist name</string>
    <string name="hint_session_name">Session name</string>
    <string name="hint_import_format">Format</string>

    <!-- Option/Action Menu -->
    <string name="option_menu_start_session">Start session</string>
    <string name="option_menu_stop_session">Stop session</string>
    <string name="option_menu_cast">Cast</string>
    <string name="action_menu_button_delete">Delete</string>

    <!-- Launch Activity -->
    <string name="launch_activity_turn_on_wifi">Turn on WiFi to enable casting.</string>
    <string name="launch_activity_go_to_settings">Go to settings</string>

    <!-- Main Activity -->
    <string name="main_activity_import_delete_all_before_import">Delete all before import</string>
    <string name="main_activity_import_replace_on_conflict">Replace on conflict</string>
    <string name="main_activity_import_dialog_title">Import</string>
    <string name="main_activity_import_incorrect_file_format">Incorrect file format</string>
    <string name="main_activity_export_preparing_data">Preparing data …</string>
    <string name="main_activity_export_saving_json">Saving to temporary directory …</string>
    <string name="main_activity_export_saving_zip">Saving zip package …</string>
    <string name="main_activity_export_deleting_temp">Deleting temporary directory …</string>
    <string name="main_activity_action_menu_export_selected">Export selected</string>
    <string name="main_activity_menu_export">Export all</string>
    <string name="main_activity_menu_import">Import</string>
    <string name="main_activity_button_edit">Edit</string>
    <string name="main_activity_button_add_song">Add song</string>
    <string name="main_activity_button_add_setlist">Add setlist</string>
    <string name="main_activity_loading_file">Loading file …</string>
    <string name="main_activity_setlist_is_empty">Setlist is empty!</string>
    <string name="main_activity_tab_join_session">Join Session</string>
    <string name="main_activity_cannot_join_session">You cannot join another session while hosting your own</string>
    <string name="main_activity_missing_permissions">You have rejected some permissions. Selected features like sessions will not work.</string>

    <!-- Song/Setlist Controls -->
    <string name="controls_previous">Previous</string>
    <string name="controls_next">Next</string>
    <string name="controls_on" translatable="false">ON</string>
    <string name="controls_off" translatable="false">OFF</string>

    <!-- Setlist Controls -->
    <string name="setlist_controls_song_item_title_template" translatable="false">%d. %s</string>

    <!-- Editors -->
    <string name="editor_button_save">Save</string>
    <string name="editor_button_add">Add</string>

    <!-- Category Manager -->
    <string name="category_manager_hint_category_name">Name</string>
    <string name="category_manager_hint_category_color">Color</string>
    <string name="category_manager_add_category">Add category</string>
    <string name="category_manager_edit_category">Edit category</string>
    <string name="category_manager_name_already_used">Category name already in use</string>
    <string name="category_manager_enter_name">Please enter category name</string>

    <!-- Setlist Editor -->
    <string name="setlist_editor_hint_selected">Selected</string>
    <string name="setlist_editor_button_pick_songs">Pick songs</string>
    <string name="setlist_editor_action_menu_duplicate">Duplicate</string>
    <string name="setlist_editor_img_drag_song">Drag song</string>
    <string name="setlist_editor_empty_warning">Empty setlists are not allowed!</string>
    <string name="setlist_editor_enter_name">Please enter setlist name</string>
    <string name="setlist_editor_name_already_used">Setlist name already in use</string>

    <!-- Song Editor -->
    <string name="song_editor_hint_enter_lyrics">Enter lyrics</string>
    <string name="song_editor_input_section_name">Section name</string>
    <string name="song_editor_input_new_song">New song</string>
    <string name="song_editor_input_new_section">NEW SECTION</string>
    <string name="song_editor_input_new_section_template">NEW SECTION %d</string>
    <string name="song_editor_button_move_left">Move left</string>
    <string name="song_editor_button_move_right">Move right</string>
    <string name="song_editor_button_delete_section">Delete section</string>
    <string name="song_editor_enter_title">Please enter song title</string>
    <string name="song_editor_title_already_used">Song title already in use</string>

    <!-- Category -->
    <string name="category_color_maroon">Maroon</string>
    <string name="category_color_tomato">Tomato</string>
    <string name="category_color_golden">Gold</string>
    <string name="category_color_olive">Olive</string>
    <string name="category_color_cyan">Cyan</string>
    <string name="category_color_turquoise">Turquoise</string>
    <string name="category_color_royal_blue">Royal blue</string>
    <string name="category_color_violet">Violet</string>
    <string name="category_color_pink">Pink</string>
    <string name="category_color_navajo_white">Navajo white</string>
    <string name="category_color_slate_gray">Slate gray</string>
    <string name="category_color_gray">Gray</string>
    <string name="category_color_steel_blue">Steel blue</string>
    <string name="category_all">ALL</string>
    <string name="category_none">NONE</string>

    <!-- Session Client -->
    <string name="session_client_connected">Session connected</string>
    <string name="session_client_disconnected">Session disconnected</string>
    <string name="session_client_failed_to_connect">Failed to connect to the session</string>
    <string name="session_client_failed_to_start_lookup">Failed to start session lookup</string>
    <string name="placeholder_gms_nearby_server_device" translatable="false">GMS Nearby Device</string>
    <string name="dialog_fragment_choose_session_title">Choose session</string>
    <string name="dialog_fragment_choose_session_looking_for_session">Looking for session…</string>

    <!-- Start Session Dialog -->
    <string name="dialog_fragment_start_session_title">Start session</string>
    <string name="dialog_fragment_start_session_start">Start</string>
    <string name="dialog_fragment_start_session_error_empty_name">Please enter the name</string>
    <string name="dialog_fragment_start_session_session_started">Session started</string>
    <string name="dialog_fragment_start_session_session_start_failed">Failed to start session</string>
    <string name="dialog_fragment_start_session_session_start_missing_permissions">Failed to start session due to missing permission</string>
    <string name="dialog_fragment_start_session_missing_permissions">You have rejected permissions required for the session feature. Please enable them in the settings.</string>

    <!-- Generic -->
    <string name="ignore">Ignore</string>
    <string name="close">Close</string>
</resources>