<!--
  ~ Created by Tomasz Kiljanczyk on 25/01/2025, 18:55
  ~ Copyright (c) 2025 . All rights reserved.
  ~ Last modified 08/12/2024, 21:35
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="dev.thomas_kiljanczyk.lyriccast.ui.main.MainActivity"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_add_category"
        android:title="@string/editor_button_add"
        app:showAsAction="always" />

</menu>