<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Tomasz Kiljanczyk on 25/01/2025, 18:55
  ~ Copyright (c) 2025 . All rights reserved.
  ~ Last modified 07/05/2024, 23:59
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="46dp"
    android:clipToPadding="false"
    android:padding="8dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_category_color"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:outlineProvider="background"
        app:layout_constraintBottom_toBottomOf="@+id/text_color_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_color_name"
        app:strokeWidth="0dp">

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_color_name"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/placeholder_text"
        android:textColorHighlight="@null"
        android:textColorHint="@null"
        android:textColorLink="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_category_color"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>